--- a/client/src/components/CommentSection.css
+++ b/client/src/components/CommentSection.css
@@ -1,4 +1,4 @@
-.comment-section {
+/* .comment-section {
   margin-top: 40px;
   background: #ffffff;
   padding: 30px;
@@ -132,4 +132,4 @@
   font-size: 15px;
   margin-top: 10px;
   font-style: italic;
-}
+} */
