--- a/client/src/components/ThreadForm.css
+++ b/client/src/components/ThreadForm.css
@@ -1,4 +1,4 @@
-/* ThreadForm.css */
+/* ThreadForm.css
 
 .thread-form-table {
   max-width: 700px;
@@ -58,4 +58,4 @@
 
 .thread-form-table button:hover {
   background-color: #6a4f2e;
-}
+} */
